--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
         "league/oauth2-linkedin": "^4.1",
         "ext-curl": "*",
         "ext-json": "*",
-        "symfony/serializer": "^2.8",
-        "symfony/property-access": "^2.8"
+        "symfony/serializer": "^3.4",
+        "symfony/property-access": "^3.4",
+        "symfony/property-info": "^3.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
